# llm_from_scratch

./: .gitignore  README.md  pretoken.py  pyproject.toml  train.py  train_tokenizer.py
core/: __init__.py  bpe_tokenizer.py  bpe_trainer.py  flash_attention.py  layers.py  model.py  optimizer.py  utils.py
data/: TinyStoriesV2-GPT4-train-vocab_size_10000-merges.txt  TinyStoriesV2-GPT4-train-vocab_size_10000-vocab.json  config.json  config_muon.json  config_tinystories_flash.json  config_tinystories_large_flash.json  config_tinystories_standard.json  owt_train-vocab_size_32000-merges.txt  owt_train-vocab_size_32000-vocab.json
data/config/: config.json  config_deeper.json  config_longer_ctx.json  config_lower_lr.json  config_muon.json  config_small_batch.json  config_tinystories_flash.json  config_tinystories_large_flash.json  config_tinystories_standard.json
